Update cielab example

--- a/examples/colors.ipynb
+++ b/examples/colors.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys; sys.path.append('../lib')\n",
+    "import sys; sys.path.append('..')\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from cielab import ABGamut, CIELAB\n",
-    "from image_net import TinyImageNet"
+    "from colorization.cielab import DEFAULT_CIELAB\n",
+    "from colorization.data.tiny_image_net import TinyImageNet"
    ]
   },
   {
@@ -31,75 +31,7 @@
     "DATA_DIR = '../data'\n",
     "FIGURE_DIR = '../figures'\n",
     "\n",
-    "AB_GAMUT_FILE = os.path.join(DATA_DIR, 'ab-gamut.npy')\n",
-    "\n",
-    "TINY_IMAGE_NET_ROOT = os.path.join(DATA_DIR, 'tiny-imagenet-200')\n",
-    "TINY_IMAGE_NET_CACHE = os.path.join(DATA_DIR, 'tiny-imagenet-200-lab-unlabeled-cache')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Construct CIELAB object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = CIELAB(gamut=ABGamut.from_file(AB_GAMUT_FILE))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Construct dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = TinyImageNet(root=TINY_IMAGE_NET_ROOT, cielab=c)\n",
-    "t.set_labeled(False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Cache dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t.cache(TINY_IMAGE_NET_CACHE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Re-load dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = TinyImageNet.restore(TINY_IMAGE_NET_CACHE)"
+    "TINY_IMAGE_NET_ROOT = os.path.join(DATA_DIR, 'tiny-image-net')"
    ]
   },
   {
@@ -115,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.plot_ab_gamut()\n",
+    "DEFAULT_CIELAB.plot_ab_gamut()\n",
     "\n",
     "plt.savefig(os.path.join(FIGURE_DIR, 'ab_gamut.svg'))"
    ]
@@ -133,9 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.plot_empirical_distribution(t, verbose=True)\n",
+    "dataset = TinyImageNet(root=TINY_IMAGE_NET_ROOT)\n",
     "\n",
-    "plt.savefig(os.path.join(FIGURE_DIR, 'ab_empirical_full.svg'))"
+    "DEFAULT_CIELAB.plot_empirical_distribution(dataset, verbose=True)\n",
+    "\n",
+    "plt.savefig(os.path.join(FIGURE_DIR, 'ab_empirical.svg'))"
    ]
   }
  ],
@@ -155,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
