Add learning outcome slides

--- a/report/tex/slides.tex
+++ b/report/tex/slides.tex
@@ -362,4 +362,47 @@
   \end{itemize}
 \end{frame}
 
+% --- LEARNING OUTCOMES --------------------------------------------------------
+
+\begin{frame}{Learning outcomes (I)}
+  \textbf{Timo:}
+    \begin{itemize}
+      \item In-depth PyTorch skills, including implementing predefined
+            architectures from common building blocks and implementing custom
+            layers
+      \item Increased familiarity with common CNN layers types, including
+            (separable/transposed/atrous) convolutions, batch normalization,
+            dropout etc.
+      \item Deeper insight into the colourization problem: Lab colour space,
+            input encoding and output decoding schemes, implementation and
+            advantages of different loss functions and rebalancing schemes and
+            how to assess colourization quality
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Learning outcomes (II)}
+  \textbf{Álvaro:}
+    \begin{itemize}
+      \item Deeper insight into the implementation of deep learning projects,
+            concretely CNN concepts and image processing
+      \item Useful programming skills, including PyTorch, remote Google
+            computational resources, and Linux commands
+      \item Customizing existing algorithms: preprocessing the target,
+            customizing the loss function and obtaining the final prediction via
+            an operation over the raw network output
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Learning outcomes (III)}
+  \textbf{Carolina:}
+    \begin{itemize}
+      \item Better knowledge of deep learning theory (CNN), techniques
+            (PyTorch) and methodology
+      \item Increased confidence with Google remote computing platforms
+      \item Better understanding of the challenges involved in having to
+            formulate the colourization problem in a computationally feasible
+            way
+    \end{itemize}
+\end{frame}
+
 \end{document}
