Add conclusions slide

--- a/report/tex/slides.tex
+++ b/report/tex/slides.tex
@@ -362,6 +362,21 @@
   \end{itemize}
 \end{frame}
 
+% --- CONCLUSIONS --------------------------------------------------------------
+
+\begin{frame}{Conclusions}
+  \begin{itemize}
+    \item We successfully reproduced the results of Zhang et al. on a reduced dataset
+    \item We showed how our network can improve grayscale image classification accuracy
+    \item The network tends to miscolour background objects, future work might include: \\
+      \begin{itemize}
+        \item Exploring post-processing approaches that enforce spatial consistency
+        \item Segmenting images into fore- and background and colouring them with
+              separate networks
+      \end{itemize}
+  \end{itemize}
+\end{frame}
+
 % --- LEARNING OUTCOMES --------------------------------------------------------
 
 \begin{frame}{Learning outcomes (I)}
