--- a/report/tex/slides.tex
+++ b/report/tex/slides.tex
@@ -56,8 +56,9 @@
 \begin{frame}{Introduction (II)}
   \textbf{Applications:}
     \begin{itemize}
-        \item Colouring historical images.
-        \item Preprocessing step in b/w image classification.
+        \item Colourization of historical images
+        \item Preprocessing step in grayscale image classification
+        \item Representation learning for transfer learning tasks
     \end{itemize}
 \end{frame}
 
@@ -69,7 +70,7 @@
     \medskip
 
     \begin{itemize}
-      \item Synthetize colours from reference pictures (Welsh et al., 2002)
+      \item Synthesise colours from reference pictures (Welsh et al., 2002)
 
       \begin{figure}[!htb]
         \minipage{0.50\textwidth}
@@ -106,9 +107,9 @@
 
 \begin{frame}{Data (I)}
   \begin{itemize}
-    \item Analyze images in the L*a*b* color space \\
+    \item Analyze images in the L*a*b* colour space \\
           $\rightarrow$ Use L channel as input \\
-          $\rightarrow$ Use a and b channel as supervisory signales
+          $\rightarrow$ Use a and b channel as supervisory signals
     \item Resize images to 256x256 px
     \item Randomly crop images to 176x176 px during training
   \end{itemize}
@@ -141,7 +142,7 @@
       \item Subset of ImageNet (42.566 images)
       \item Semantically related categories (mostly fruits and vegetables) \\
             $\rightarrow$ Make training feasible given computational resources \\
-            $\rightarrow$ Vibrant colors: easy to inspect quality of the results
+            $\rightarrow$ Vibrant colours: easy to inspect quality of the results
     \end{itemize}
 
   \medskip
@@ -151,13 +152,13 @@
     \includegraphics[width=.23\linewidth]{resources/veg2.jpg}\hfill
     \includegraphics[width=.23\linewidth]{resources/veg3.jpg}\hfill
     \includegraphics[width=.23\linewidth]{resources/veg4.jpg}
-    \caption{Examples of images from our training set.}
+    \caption{Examples of images from our training set}
   \end{figure}
 \end{frame}
 
 % --- METHODS ------------------------------------------------------------------
 
-\begin{frame}{Methods (I): Transformation}
+\begin{frame}{Methods (I): Network Output}
   \textbf{Input:}
     \begin{itemize}
        \item Luminance channel $L$
@@ -179,8 +180,8 @@
 
 \begin{frame}{Methods (II): Loss Function}
   \begin{itemize}
-    \item Raw output: probability distribution $Z \in [0, 1]^{H \times W \times Q}$
-    \item Obtain $\hat{Z}$ from ground truth via \textbf{soft encoding}
+    \item Raw output: probability distribution $\hat{Z} \in [0, 1]^{H \times W \times Q}$
+    \item Obtain $Z$ from ground truth via \textbf{soft encoding}
   \end{itemize}
 
   \begin{equation}
@@ -202,7 +203,7 @@
 
 \begin{frame}{Methods (III): From Colour Probabilities to Point Estimates}
   \begin{itemize}
-    \item Decode $Z$ to $ab \in [-110,110]^{H \times W \times 2}$ via \textbf{Annealed Mean}
+    \item Decode $\hat{Z}$ to $ab \in [-110,110]^{H \times W \times 2}$ via \textbf{Annealed Mean}
   \end{itemize}
 
   \begin{equation}
@@ -234,7 +235,7 @@
 \begin{frame}{Methods (IV): Network Architecture}
   \textbf{Feature extraction:}
     \begin{itemize}
-      \item VGG like
+      \item VGG like network structure
       \item (atrous) convolution, deconvolution and batchnorm layers
       \item ReLU activations
       \item Kernel size $3 \times 3$
@@ -269,25 +270,25 @@
 
 % --- EXPERIMENTS --------------------------------------------------------------
 
-\begin{frame}{Training}
+\begin{frame}{Training (I): Overview}
   \begin{center}
     \includegraphics[width=\textwidth]{resources/training.pdf}
   \end{center}
 \end{frame}
 
-\begin{frame}{Training}
+\begin{frame}{Training (II): Optimization}
   \begin{itemize}
     \item Adam optimizer
        \begin{itemize}
          \item $\beta_1 = .9$, $\beta_2 = .99$
-         \item weight decay = $10^-3$
+         \item Weight decay = $10^-3$
          \item $\eta = 3.16 \time 10^{-5}$ (constant)
-         \item batch size = 40
+         \item Batch size = 40
        \end{itemize}
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Training}
+\begin{frame}{Training (III): Learning Curve}
   \begin{itemize}
     \item $\approx 20$ hours of training on NVIDIA Tesla V100
   \end{itemize}
@@ -311,12 +312,12 @@
   \begin{itemize}
     \item $50$ randomly chosen validation set images
     \item $10$ participants
-    \item fooled on average $18.78\%$ of the time
-    \item $\rightarrow$ photorealistic results only for ``easy'' images
+    \item Fooled on average $18.78\%$ of the time
+    \item Photorealistic results only for ``easy'' images
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Colourization as Preprocessing}
+\begin{frame}{Colourization as Preprocessing (I)}
   \begin{center}
     \begin{tabular}{cc}
       \scalebox{0.8}{
@@ -340,12 +341,12 @@
   \medskip
 
   \begin{itemize}
-    \item top-5 classification accuracy for 1000 validation set images
+    \item Top-5 classification accuracy for 1000 validation set images
     \item $\rightarrow$ dramatically improved by colourization!
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Colourization as Preprocessing}
+\begin{frame}{Colourization as Preprocessing (II)}
   \begin{columns}
     \begin{column}{0.4\textwidth}
       \includegraphics[width=\textwidth]{resources/confusion_rates.pdf}
@@ -358,7 +359,7 @@
   \medskip
 
   \begin{itemize}
-    \item colourization amplifies certain confusion cases
+    \item Colourization amplifies certain confusion cases
   \end{itemize}
 \end{frame}
 
