--- a/report/tex/slides.tex
+++ b/report/tex/slides.tex
@@ -10,6 +10,14 @@
 \setbeamertemplate{footline}[frame number]{}
 \setbeamerfont{footline}{size=\large}
 
+% footnotes
+\newcommand\blfootnote[1]{%
+  \begingroup
+  \renewcommand\thefootnote{}\footnote{#1}%
+  \addtocounter{footnote}{-1}%
+  \endgroup
+}
+
 % remove navigation symbols
 \beamertemplatenavigationsymbolsempty
 
@@ -178,8 +186,10 @@
   \medskip
 
   \begin{center}
-    \includegraphics[width=.4\linewidth]{resources/gamut.jpg}
+    \includegraphics[width=.8\linewidth]{resources/gamut.jpg}
   \end{center}
+
+  \blfootnote{Figure from \cite{Zhang2016}}
 \end{frame}
 
 \begin{frame}{Methods (II): Loss Function}
@@ -234,6 +244,8 @@
   \medskip
 
   \includegraphics[width=\linewidth]{resources/network1.jpg}
+
+  \blfootnote{Figure from \cite{Zhang2016}}
 \end{frame}
 
 \begin{frame}{Methods (IV): Network Architecture}
@@ -248,6 +260,8 @@
   \medskip
 
   \includegraphics[width=\linewidth]{resources/network2.jpg}
+
+  \blfootnote{Figure from \cite{Zhang2016}}
 \end{frame}
 
 \begin{frame}{Methods (IV): Network Architecture}
@@ -259,6 +273,8 @@
   \medskip
 
   \includegraphics[width=\linewidth]{resources/network3.jpg}
+
+  \blfootnote{Figure from \cite{Zhang2016}}
 \end{frame}
 
 \begin{frame}{Methods (IV): Network Architecture}
@@ -270,6 +286,8 @@
   \medskip
 
   \includegraphics[width=\linewidth]{resources/network4.jpg}
+
+  \blfootnote{Figure from \cite{Zhang2016}}
 \end{frame}
 
 % --- EXPERIMENTS --------------------------------------------------------------
