Remove extra bullet point

--- a/report/tex/slides.tex
+++ b/report/tex/slides.tex
@@ -299,15 +299,13 @@
 \end{frame}
 
 \begin{frame}{Training (II): Optimization}
-  \begin{itemize}
-    \item Adam optimizer
-       \begin{itemize}
-         \item $\beta_1 = .9$, $\beta_2 = .99$
-         \item Weight decay = $10^-3$
-         \item $\eta = 3.16 \time 10^{-5}$ (constant)
-         \item Batch size = 40
-       \end{itemize}
-  \end{itemize}
+  \textbf{Adam optimizer:}
+     \begin{itemize}
+       \item $\beta_1 = .9$, $\beta_2 = .99$
+       \item Weight decay = $10^-3$
+       \item $\eta = 3.16 \time 10^{-5}$ (constant)
+       \item Batch size = 40
+     \end{itemize}
 \end{frame}
 
 \begin{frame}{Training (III): Learning Curve}
